More comment about properties + Creation of the Among property (used to create the on-the-fly sequence constraint's intersection)